--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
@@ -91,6 +91,10 @@
                                     <tr>
                                         <th>Puesto</th>
                                         <td>@Html.DisplayFor(model => model.puesto1.descripcion)</td>
+                                    </tr>  
+                                    <tr>
+                                        <th>@Html.DisplayNameFor(model => model.id_jefe_directo)</th>
+                                        <td>@Html.DisplayFor(model => model.empleados2.ConcatNumEmpleadoNombre)</td>
                                     </tr>
                                     <tr>
                                         <th>@Html.DisplayNameFor(model => model.activo)</th>
