--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Create.cshtml
@@ -107,22 +107,6 @@
                                 </div>
                             </div>
 
-                            if (ViewBag.MuestraLineas != null && ViewBag.MuestraLineas)
-                            {
-
-                                <div class="form-group row">
-                                    <!--id linea-->
-                                    @Html.LabelFor(model => model.id_linea, new { @class = "control-label col-md-1 text_derecha" })
-                                    <div class="col-md-4">
-                                        @Html.DropDownList("id_linea", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
-                                        @Html.ValidationMessageFor(model => model.id_linea, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            }
-
-                            @*<div class="form-group row">
-                <span style="color:black"><b>DESCRIPCI&Oacute;N</b></span>
-            </div>*@
                             <div class="form-group row">
                                 <!--Titulo-->
                                 @Html.LabelFor(model => model.titulo, new { @class = "control-label col-md-1 text_derecha" })
@@ -137,6 +121,26 @@
                                     @Html.ValidationMessageFor(model => model.nivel_urgencia, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+
+                            if (ViewBag.MuestraLineas != null && ViewBag.MuestraLineas)
+                            {
+
+                                <div class="form-group row">
+                                    <!--id linea-->
+                                    @Html.LabelFor(model => model.id_linea, new { @class = "control-label col-md-1 text_derecha" })
+                                    <div class="col-md-4">
+                                        @Html.DropDownList("id_linea", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                        @Html.ValidationMessageFor(model => model.id_linea, "", new { @class = "text-danger" })
+                                    </div>
+                                    <!-- zona de fallas -->
+                                    @Html.LabelFor(model => model.id_zona_falla, new { @class = "control-label col-md-1 text_derecha" })
+                                    <div class="col-md-4">
+                                        @Html.DropDownList("id_zona_falla", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                        @Html.ValidationMessageFor(model => model.id_zona_falla, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            }
 
                             <div class="ln_solid"></div>
                             <div class="form-group row">
@@ -290,7 +294,36 @@
             //una vez cargada la página verifica si mostrar o no TPM
             verificaTPM(0);
 
+           //carga las fallas correspondientes a la línea
+            $("#@Html.IdFor(model => model.id_linea)").change(function () {
+
+                console.log('Se seleccionó: ' + $(this).val());
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/Combos/ObtieneZonaFalla',
+                    data: { id_linea: $(this).val() },
+                    success: function (data) {
+                        populateDropdown($("#@Html.IdFor(model => model.id_zona_falla)"), data);
+
+                    },
+                    async: true
+                });
+
+                //verificaEstadoCombos();
+            });
+
         });
+
+
+        //completa el select con los datos recibidos
+        function populateDropdown(select, data) {
+            select.html('');
+            $.each(data, function (id, option) {
+                select.append($('<option></option>').val(option.value).html(option.name));
+            });
+        }
+
 
         function verificaTPM(tiempo) {
             var isChecked = $("#tpm").prop("checked");
