--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ListadoAsignacionAsignadas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ListadoAsignacionAsignadas.cshtml
@@ -59,19 +59,51 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="card-box">
+
                                     <div class="form-group">
-
-
-                                        @*@if (ViewBag.Create != null && ViewBag.Create)
-                                            {
-                                                <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
-                                                    <i class="fa fa-plus-square"></i>
-                                                    Crear nuevo
-                                                </a>
-                                            }*@
+                                        @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
+                                        {
+                                            <div class="form-group row ">
+                                                <label class="control-label col-md-1 col-sm-1" for="estatus" style="text-align:right">Estatus:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("estatus", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="prioridad" style="text-align:right">Urgencia:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("prioridad", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
+                                            </div>
+                                            <div class="form-group row ">
+                                                <label class="control-label col-md-1 col-sm-1" for="id_solicitante" style="text-align:right">Solicitante:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("id_solicitante", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="id_responsable" style="text-align:right">Responsable:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("id_responsable", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>                                               
+                                            </div>
+                                            <div class="form-group row ">
+                                                <div class="col-md-5 col-sm-5">
+                                                </div>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    <a href="@Url.Action("ListadoAsignacionAsignadas", ViewBag.ControllerName)" class="btn btn-warning" title="Restablecer">
+                                                        <i class="fa fa-refresh"></i> Restablecer
+                                                    </a>
+                                                </div>
+                                                <div class="col-md-1 col-sm-1">
+                                                    <input type="submit" value="Filtrar" class="btn btn-info" />
+                                                </div>
+                                            </div>
+                                        }
+                                        <hr />
 
                                     </div>
-                                    <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+
+                                    <div class="form-group">
+
+                                    </div>
+                                    <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" style="width:100%">
                                         <thead>
                                             <tr>
                                                 <th width="5%">Acciones</th>
@@ -83,6 +115,12 @@
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.fecha_solicitud)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.id_solicitante)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.id_responsable)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.nivel_urgencia)
@@ -101,13 +139,13 @@
                                             @foreach (var item in Model)
                                             {
                                                 <tr>
-                                                    <td>
-                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary " title="Detalles">
+                                                    <td nowrap>
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btn-sm" title="Detalles">
                                                             <i class="fa fa-info-circle"></i>
                                                         </a>
                                                         @if (item.estatus != Bitacoras.Util.OT_Status.CERRADO)
                                                         {
-                                                            <a href="@Url.Action("Asignar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" title="Reasignar">
+                                                            <a href="@Url.Action("Asignar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Reasignar">
                                                                 <i class="fa fa-arrow-right-arrow-left"></i>
                                                             </a>
                                                         }
@@ -118,8 +156,14 @@
                                                     <td>
                                                         @Bitacoras.Util.OT_Status.DescripcionStatus(item.estatus)
                                                     </td>
-                                                    <td>
+                                                    <td nowrap>
                                                         @Html.DisplayFor(modelItem => item.fecha_solicitud)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados2.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.nivel_urgencia)
@@ -170,8 +214,11 @@
                 "paging": false,
                 "ordering": false,
                 "searching": false,
-                "scrollX": true,
-                "info": false
+                "scrollX": false,
+                "info": false,
+                //columnDefs: [
+                //    { width: '10%', targets: 0 }
+                //],
             });
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -179,7 +226,35 @@
                 theme: 'bootstrap4'
             })
 
+            //Agrega el evento a todos los input
+            $(":input").each(function () {
+                $(this).on('input', function (e) {
+                    EnviaFormulario();
+                });
+            });
+
+
         });
+
+        //Envía el formulario de búsqueda
+        function EnviaFormulario() {
+
+            $("#buscarForm").submit();
+            $.blockUI({
+                css: {
+                    border: 'none',
+                    padding: '15px',
+                    backgroundColor: '#000',
+                    '-webkit-border-radius': '10px',
+                    '-moz-border-radius': '10px',
+                    opacity: .3,
+                    color: '#fff'
+                },
+                message: '<h3>Cargando...</h3>'
+
+            });
+
+        }
 
         //agranda el tamaño de la barra
         window.onload = function () {
