--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ListadoAsignacionPendientes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ListadoAsignacionPendientes.cshtml
@@ -71,12 +71,15 @@
                                             }*@
 
                                     </div>
-                                    <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
                                                 <th width="5%">Acciones</th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.id_solicitante)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.titulo)
@@ -99,19 +102,22 @@
                                             @foreach (var item in Model)
                                             {
                                             <tr>
-                                                <td>
-                                                    <a href="@Url.Action("Asignar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success boton-verde" title="Asignar">
+                                                <td nowrap>
+                                                    <a href="@Url.Action("Asignar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success boton-verde btn-sm" title="Asignar">
                                                         <i class="fa fa-user-tag"></i>
                                                     </a>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id, redirect ="ListadoAsignacionPendientes" })" class="btn btn-success " title="Editar">
+                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id, redirect ="ListadoAsignacionPendientes" })" class="btn btn-success btn-sm" title="Editar">
                                                         <i class="fa-regular fa-pen-to-square"></i>
                                                     </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary " title="Detalles">
+                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btn-sm" title="Detalles">
                                                         <i class="fa fa-info-circle"></i>
                                                     </a>
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.id)
+                                                </td>
+                                                 <td>
+                                                    @Html.DisplayFor(modelItem => item.empleados2.ConcatNombre)
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.titulo)
@@ -119,7 +125,7 @@
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.descripcion)
                                                 </td>
-                                                <td>
+                                                <td nowrap>
                                                     @Html.DisplayFor(modelItem => item.fecha_solicitud)
                                                 </td>
                                                 <td>
@@ -168,6 +174,7 @@
                 "searching": false,
                 "scrollX": true,
                 "info": false
+            
             });
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
