--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ReporteGeneral.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ReporteGeneral.cshtml
@@ -44,7 +44,16 @@
     {
         tpm = paginacionFiltros.ValoresQueryString["tpm"].ToString();
     }
-
+    string id_solicitante = string.Empty;
+    if (paginacionFiltros.ValoresQueryString["id_solicitante"] != null)
+    {
+        id_solicitante = paginacionFiltros.ValoresQueryString["id_solicitante"].ToString();
+    }
+    string id_responsable = string.Empty;
+    if (paginacionFiltros.ValoresQueryString["id_responsable"] != null)
+    {
+        tpm = paginacionFiltros.ValoresQueryString["id_responsable"].ToString();
+    }
 
 }
 
@@ -123,20 +132,31 @@
                                                 <div class="col-md-3 col-sm-3">
                                                     <input type="date" class="form-control" name="fecha_final" id="fecha_final" value="@filtroFechaFinal">
                                                 </div>
-                                                <label class="control-label col-md-1 col-sm-1" for="id" style="text-align:right">Id:</label>
+                                                <label class="control-label col-md-1 col-sm-1" for="id" style="text-align:right">Folio:</label>
                                                 <div class="col-md-3 col-sm-3">
                                                     <input type="text" class="form-control" name="id" id="id" value="@id" autocomplete="off">
                                                 </div>
 
                                             </div>
+
                                             <div class="form-group row ">
                                                 <label class="control-label col-md-1 col-sm-1" for="planta" style="text-align:right">TPM:</label>
                                                 <div class="col-md-3 col-sm-3">
                                                     @Html.DropDownList("tpm", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="id_solicitante" style="text-align:right">Solicitante:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("id_solicitante", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="id_responsable" style="text-align:right">Responsable:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("id_responsable", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
                                             </div>
                                             <div class="form-group row ">
-                                                <div class="col-md-11 col-sm-11">
+                                                <div class="col-md-9 col-sm-9">
+                                                </div>
+                                                <div class="col-md-2 col-sm-2">
                                                     <a href="@Url.Action("ReporteGeneral", ViewBag.ControllerName)" class="btn btn-warning" title="Restablecer">
                                                         <i class="fa fa-refresh"></i> Restablecer
                                                     </a>
@@ -157,7 +177,7 @@
         }*@
 
                                     </div>
-                                    <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>Acciones</th>
@@ -165,10 +185,19 @@
                                                     @Html.DisplayNameFor(model => model.id)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayNameFor(model => model.id_solicitante)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.id_responsable)
+                                                </th>
+                                                <th>
                                                     @Html.DisplayNameFor(model => model.titulo)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.descripcion)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.estatus)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.fecha_solicitud)
@@ -179,53 +208,58 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.tpm)
                                                 </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.estatus)
-                                                </th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
-                                                <td>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary " title="Detalles">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>
-                                                    @if ( User.IsInRole(Clases.Util.TipoRoles.OT_ASIGNACION))
-                                                    {
-                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id, redirect ="ReporteGeneral" })" class="btn btn-success " title="Editar">
-                                                            <i class="fa-regular fa-pen-to-square"></i>
+                                                <tr>
+                                                    <td nowrap>
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary " title="Detalles">
+                                                            <i class="fa fa-info-circle"></i>
                                                         </a>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.id)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.titulo)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.fecha_solicitud)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.nivel_urgencia)
-                                                </td>
-                                                <td>
-                                                    @if (item.tpm) { 
-                                                    <span>S&Iacute;</span>
-                                                    } 
-                                                    else { 
-                                                    <span>NO</span>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    @Bitacoras.Util.OT_Status.DescripcionStatus(item.estatus)
-                                                </td>
-                                            </tr>
+                                                        @if (User.IsInRole(Clases.Util.TipoRoles.OT_ASIGNACION))
+                                                        {
+                                                            <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id, redirect ="ReporteGeneral" })" class="btn btn-success " title="Editar">
+                                                                <i class="fa-regular fa-pen-to-square"></i>
+                                                            </a>
+                                                        }
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.id)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados2.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.titulo)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        <b>@Bitacoras.Util.OT_Status.DescripcionStatus(item.estatus)</b>
+                                                    </td>
+                                                    <td nowrap>
+                                                        @Html.DisplayFor(modelItem => item.fecha_solicitud)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.nivel_urgencia)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.tpm)
+                                                        {
+                                                            <span>S&Iacute;</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>NO</span>
+                                                        }
+                                                    </td>
+                                                </tr>
                                             }
 
                                         </tbody>
@@ -237,22 +271,23 @@
                                     <nav id="nav_paginacion" aria-label="...">
                                         @{Html.RenderPartial("_Paginacion", Model);}
                                     </nav>
-                                          
+
                                     <div class="form-group">
-                                       
+
                                         <a href="@Url.Action("Exportar", ViewBag.ControllerName, new
                                                 {
                                                     estatus = estatus,
                                                     nivel_urgencia = nivel_urgencia,
                                                     fecha_inicial = filtroFechaInicio,
                                                     fecha_final = filtroFechaFinal,
-                                                    id = id, 
-                                                    tpm = tpm
+                                                    id = id,
+                                                    tpm = tpm,
+                                                    id_solicitante = id_solicitante,
+                                                    id_responsable = id_responsable
 
                                                 })" class="btn btn-success btm-sm" target="_blank" title="Reporte">
                                             <i class="fa-regular fa-file-excel"></i> Exportar Excel
                                         </a>
-
 
                                     </div>
                                 }
@@ -290,7 +325,34 @@
                 theme: 'bootstrap4'
             })
 
+
+            //Agrega el evento a todos los input
+            $(".select2bs4").each(function () {
+                $(this).on('input', function (e) {
+                    EnviaFormulario();
+                });
+            });
         });
+
+        //activa y desactiva los combos
+        function EnviaFormulario() {
+
+            $("#buscarForm").submit();
+            $.blockUI({
+                css: {
+                    border: 'none',
+                    padding: '15px',
+                    backgroundColor: '#000',
+                    '-webkit-border-radius': '10px',
+                    '-moz-border-radius': '10px',
+                    opacity: .3,
+                    color: '#fff'
+                },
+                message: '<h3>Cargando...</h3>'
+
+            });
+
+        }
 
         //agranda el tamaño de la barra
         window.onload = function () {
