--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
@@ -50,7 +50,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                
+
             </div>
         </div>
 
@@ -78,28 +78,37 @@
                                         @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
                                         {
 
-                                        <div class="form-group row ">
-                                            <label class="control-label col-md-1 col-sm-1" for="nombre" style="text-align:right">Nombre:</label>
-                                            <div class="col-md-3 col-sm-3 ">
-                                                <input type="text" id="nombre" name="nombre" class="form-control" value="@nombre" autocomplete="off" />
+                                            <div class="form-group row ">
+                                                <label class="control-label col-md-1 col-sm-1" for="nombre" style="text-align:right">Nombre:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    <input type="text" id="nombre" name="nombre" class="form-control" value="@nombre" autocomplete="off" />
+                                                </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="nombre_equipo" style="text-align:right">Planta:</label>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
+                                                <label class="control-label col-md-1 col-sm-1" for="num_empleado" style="text-align:right">N&uacute;m. Empleado:</label>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    <input type="text" id="num_empleado" name="num_empleado" class="form-control" value="@num_empleado" autocomplete="off" />
+                                                </div>
+
                                             </div>
-                                            <label class="control-label col-md-1 col-sm-1" for="nombre_equipo" style="text-align:right">Planta:</label>
-                                            <div class="col-md-2 col-sm-2 ">
-                                                @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                            <div class="form-group row ">
+
+                                                <label class="control-label col-md-1 col-sm-1" for="id_jefe_directo" style="text-align:right">Jefe directo:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
+
+                                                <div class="col-md-1 col-sm-1">
+                                                    <a href="@Url.Action( "Index", ViewBag.ControllerName)" class="btn btn-warning">
+                                                        <i class="fa fa-refresh"></i>
+                                                    </a>
+                                                </div>
+                                                <div class="col-md-1 col-sm-1">
+                                                    <input type="submit" value="Buscar" class="btn btn-info float-right" />
+                                                </div>
                                             </div>
-                                            <label class="control-label col-md-1 col-sm-1" for="num_empleado" style="text-align:right">N&uacute;m. Empleado:</label>
-                                            <div class="col-md-2 col-sm-2 ">
-                                                <input type="text" id="num_empleado" name="num_empleado" class="form-control" value="@num_empleado" autocomplete="off" />
-                                            </div>
-                                            <div class="col-md-1 col-sm-1">
-                                                <a href="@Url.Action( "Index", ViewBag.ControllerName)" class="btn btn-warning">
-                                                    <i class="fa fa-refresh"></i>
-                                                </a>
-                                            </div>
-                                            <div class="col-md-1 col-sm-1">
-                                                <input type="submit" value="Buscar" class="btn btn-info float-right" />
-                                            </div>
-                                        </div>
 
                                         }
                                         <hr />
@@ -108,10 +117,12 @@
                                             Crear nuevo
                                         </a>
                                     </div>
-                                    <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
-
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.nombre)
+                                                </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.numeroEmpleado)
                                                 </th>
@@ -119,7 +130,10 @@
                                                     Planta
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.nombre)
+                                                    @Html.DisplayNameFor(model => model.id_area)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.id_jefe_directo)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.C8ID)
@@ -127,14 +141,6 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.correo)
                                                 </th>
-
-
-                                                @*<th>
-                                                    Departamento
-                                                </th>
-                                                <th>
-                                                    Puesto
-                                                </th>*@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
@@ -144,73 +150,73 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr style="@(item.activo == false ? "color:red" :"" )">
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.numeroEmpleado)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.plantas.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.ConcatNombre)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.C8ID)
-                                                </td>
+                                                <tr style="@(item.activo == false ? "color:red" :"" )">
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.numeroEmpleado)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.plantas.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados2.ConcatNombre)
+                                                    </td>
 
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.correo)
-                                                </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.C8ID)
+                                                    </td>
 
-                                                @*<th>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.puesto1.descripcion)
-                                                </th>*@
-                                                <td>
-                                                    @if (item.activo.HasValue && item.activo.Value)
-                                                    {
-                                                        <span>Activo</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>Inactivo</span>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btn-sm" title="Editar">
-                                                        <i class="fa-regular fa-pen-to-square"></i>
-                                                    </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btn-sm" title="Detalles">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.correo)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.activo.HasValue && item.activo.Value)
+                                                        {
+                                                            <span>Activo</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>Inactivo</span>
+                                                        }
+                                                    </td>
+                                                    <td nowrap>
+                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btn-sm" title="Editar">
+                                                            <i class="fa-regular fa-pen-to-square"></i>
+                                                        </a>
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btn-sm" title="Detalles">
+                                                            <i class="fa fa-info-circle"></i>
+                                                        </a>
 
-                                                    @if (item.activo.HasValue)
-                                                    {
-                                                        if (!item.activo.Value)
+                                                        @if (item.activo.HasValue)
+                                                        {
+                                                            if (!item.activo.Value)
+                                                            {
+                                                                <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
+                                                                    <i class="fa fa-check"></i>
+                                                                </a>
+                                                            }
+                                                            else
+                                                            {
+                                                                <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger btn-sm" title="Dar de Baja">
+                                                                    <i class="fa fa-times"></i>
+                                                                </a>
+                                                            }
+                                                        }
+                                                        else
                                                         {
                                                             <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
                                                                 <i class="fa fa-check"></i>
                                                             </a>
                                                         }
-                                                        else
-                                                        {
-                                                            <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger btn-sm" title="Dar de Baja">
-                                                                <i class="fa fa-times"></i>
-                                                            </a>
-                                                        }
-                                                    }
-                                                    else
-                                                    {
-                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
-                                                            <i class="fa fa-check"></i>
-                                                        </a>
-                                                    }
-                                                  
 
-                                                </td>
-                                            </tr>
+
+                                                    </td>
+                                                </tr>
                                             }
                                         </tbody>
                                     </table>
@@ -255,9 +261,35 @@
                 theme: 'bootstrap4'
             })
 
+            //Agrega el evento a todos los input
+            $(".select2bs4").each(function () {
+                $(this).on('input', function (e) {
+                    EnviaFormulario();
+                });
+            });
+
+
         });
 
+        //Envía el formulario de búsqueda
+        function EnviaFormulario() {
 
+            $("#buscarForm").submit();
+            $.blockUI({
+                css: {
+                    border: 'none',
+                    padding: '15px',
+                    backgroundColor: '#000',
+                    '-webkit-border-radius': '10px',
+                    '-moz-border-radius': '10px',
+                    opacity: .3,
+                    color: '#fff'
+                },
+                message: '<h3>Cargando...</h3>'
+
+            });
+
+        }
         //agranda el tamaño de la barra
         window.onload = function () {
             document.getElementById('menu_toggle').click();
